# viridian-app

./: .gitignore  README.md  add-color-tool.ts  config.json  overlay.html  package.json  pnpm-lock.yaml  suggestion.html  tailwind.config.js  vite.config.ts
cfg-backups/: global.css  tailwind.config.js
docs/: INTRODUCTION.md
docs/dev/: linking.md
docs/quickstart/: skeleton.md  start.md
docs/usage/: overlay.md
src/: main.tsx  overlay-main.tsx  overlay.html  suggestion-main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  themes.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  overlay.json
src-tauri/src/: appbar.rs  lib.rs  main.rs  w_ops.rs
src-tauri/src/helper/: mod.rs
src-tauri/src/helper/api/: init.rs
src-tauri/src/helper/os/: init.rs
src-tauri/src/helper/overlay_funcs/: init.rs
src-tauri/src/helper/systray/: init.rs  mod.rs
src-tauri/src/helper/tts_service/: init.rs
src-tauri/src/helper/window/: init.rs  mod.rs
src-tauri/src/window/: appbar.rs  mod.rs  w_ops.rs
src/app/: global.css  router.tsx
src/app/overlay/: overlay.tsx
src/app/suggestion/: suggestion.tsx
src/app/utils/: theme.ts
src/components/: component.css  index.ts
src/components/banner/: banner.tsx
src/components/bottombar/: bottombar.tsx  index.ts
src/components/icon/: icon.tsx
src/components/lib_ops/: lib_ops.tsx
src/components/nav/: nav.tsx
src/components/navigation/: index.ts  navigation.tsx
src/context/: LanguageContext.tsx  ThemeContext.tsx
src/hooks/: gemni.ts
src/utils/: translations.ts  uiHelpers.ts
(+36 files in other folders)
