[package]
name = "viridian"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "viridian_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.62.2", features = ["Win32", "Win32_UI_WindowsAndMessaging", "Win32_UI_Shell"] }
winit = "0.30.12"
tts = "0.26.3"
env_logger = "0.11.8"
tokio = "1.48.0"
regex = "1.12.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
selection = "1.2.0"
